--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="card card-body">
             Лабораторная работа 3:
           <ol style="margin-bottom: 0px;">
-            В рамках данной лабораторной работы необходимо настроить сеть в Cisco Packet Tracer. Настраивалась адаптивная маршрутизация RIP и OSPF
+            В рамках данной лабораторной работы необходимо было настроить сеть в Cisco Packet Tracer. Настраивалась адаптивная маршрутизация RIP и OSPF
             Сценарий, Схема сети, конфигурация устройств и настройка адаптивной маршрутизации находятся в <a href="#" class="card-link">архиве</a>
           </ol>
           </div>
